RESOLVED FIXED25106
Mismatched virtual function signatures in animations
https://bugs.webkit.org/show_bug.cgi?id=25106
Summary Mismatched virtual function signatures in animations
Simon Fraser (smfr)
Reported 2009-04-08 18:18:19 PDT
AnimationBase has virtual void endAnimation(bool, double) and the double is never used. Everything else has virtual void endAnimation(bool) I think this is causing a real bug on http://demo.webapp-net.com, where there's an opacity animation that's never cleaned up.
Attachments
Patch (1.23 KB, patch)
2009-04-08 18:29 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2009-04-08 18:29:08 PDT
Simon Fraser (smfr)
Comment 2 2009-04-08 18:34:15 PDT
Note You need to log in before you can comment on or make changes to this bug.