2009-04-08  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Cameron Zwarich

        https://bugs.webkit.org/show_bug.cgi?id=25106

        Fix signature of virtual function on AnimationBase so that it matches
        those in the derived classes, by removing unused parameter.

        * page/animation/AnimationBase.h:
        (WebCore::AnimationBase::endAnimation):

Canonical link: https://commits.webkit.org/34400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42346 268f45cc-cd09-0410-ab3c-d52691b4dbfc